Remove note members from the note
