# backend/source/generated/restapi/operations/coreapi_api.go
@@ -131,6 +131,9 @@ func NewCoreapiAPI(spec *loads.Document) *CoreapiAPI {
 		GroupsV1RemoveGroupUsersV1Handler: groups_v1.RemoveGroupUsersV1HandlerFunc(func(params groups_v1.RemoveGroupUsersV1Params) middleware.Responder {
 			return middleware.NotImplemented("operation groups_v1.RemoveGroupUsersV1 has not yet been implemented")
 		}),
+		NotesV1RemoveNoteMembersV1Handler: notes_v1.RemoveNoteMembersV1HandlerFunc(func(params notes_v1.RemoveNoteMembersV1Params) middleware.Responder {
+			return middleware.NotImplemented("operation notes_v1.RemoveNoteMembersV1 has not yet been implemented")
+		}),
 		UserMgmtV1SearchUserV1Handler: user_mgmt_v1.SearchUserV1HandlerFunc(func(params user_mgmt_v1.SearchUserV1Params) middleware.Responder {
 			return middleware.NotImplemented("operation user_mgmt_v1.SearchUserV1 has not yet been implemented")
 		}),
@@ -239,6 +242,8 @@ type CoreapiAPI struct {
 	FriendsV1RemoveFriendsV1Handler friends_v1.RemoveFriendsV1Handler
 	// GroupsV1RemoveGroupUsersV1Handler sets the operation handler for the remove group users v1 operation
 	GroupsV1RemoveGroupUsersV1Handler groups_v1.RemoveGroupUsersV1Handler
+	// NotesV1RemoveNoteMembersV1Handler sets the operation handler for the remove note members v1 operation
+	NotesV1RemoveNoteMembersV1Handler notes_v1.RemoveNoteMembersV1Handler
 	// UserMgmtV1SearchUserV1Handler sets the operation handler for the search user v1 operation
 	UserMgmtV1SearchUserV1Handler user_mgmt_v1.SearchUserV1Handler
 	// NotesV1UpdateNoteHandler sets the operation handler for the update note operation
@@ -409,6 +414,9 @@ func (o *CoreapiAPI) Validate() error {
 	}
 	if o.GroupsV1RemoveGroupUsersV1Handler == nil {
 		unregistered = append(unregistered, "groups_v1.RemoveGroupUsersV1Handler")
+	}
+	if o.NotesV1RemoveNoteMembersV1Handler == nil {
+		unregistered = append(unregistered, "notes_v1.RemoveNoteMembersV1Handler")
 	}
 	if o.UserMgmtV1SearchUserV1Handler == nil {
 		unregistered = append(unregistered, "user_mgmt_v1.SearchUserV1Handler")
@@ -623,6 +631,10 @@ func (o *CoreapiAPI) initHandlerCache() {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
 	o.handlers["DELETE"]["/v1/groups/{group_id}/members"] = groups_v1.NewRemoveGroupUsersV1(o.context, o.GroupsV1RemoveGroupUsersV1Handler)
+	if o.handlers["DELETE"] == nil {
+		o.handlers["DELETE"] = make(map[string]http.Handler)
+	}
+	o.handlers["DELETE"]["/v1/notes/{id}/members"] = notes_v1.NewRemoveNoteMembersV1(o.context, o.NotesV1RemoveNoteMembersV1Handler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
